--- a/assets/post/components/navigation/navigation-basic.css
+++ b/assets/post/components/navigation/navigation-basic.css
@@ -21,7 +21,7 @@
     $basic-nav-item-padding: 1rem; /* The space between each top level item */
 
     /* Links */
-    $basic-nav-link-color: $black;
+    $basic-nav-link-color: var(--black);
     $basic-nav-link-font-family: $global-font-family;
     $basic-nav-link-font-size: 1rem;
     $basic-nav-link-text-transform: none;
@@ -34,7 +34,7 @@
 
     /* Dropdown Indicator */
     $basic-nav-dropdown-indicator-size: 5px;
-    $basic-nav-dropdown-indicator-color: $highlight;
+    $basic-nav-dropdown-indicator-color: var(--highlight);
     $basic-nav-dropdown-indicator-spacing: 0.5rem;
 
     /* Expander */
@@ -49,14 +49,14 @@
     $basic-nav-submenu-padding: 0;
     $basic-nav-submenu-background: white;
     $basic-nav-submenu-border-width: 2px;
-    $basic-nav-submenu-border: $basic-nav-submenu-border-width solid $black;
+    $basic-nav-submenu-border: $basic-nav-submenu-border-width solid var(--black);
 
     /* Items */
     $basic-nav-submenu-item-padding: 0.5rem;
     $basic-nav-submenu-item-border: $basic-nav-submenu-border;
 
     /* Links */
-    $basic-nav-submenu-link-color: $black;
+    $basic-nav-submenu-link-color: var(--black);
     $basic-nav-submenu-link-font-family: $global-font-family;
     $basic-nav-submenu-link-font-size: 0.85rem;
     $basic-nav-submenu-link-text-transform: none;
@@ -70,7 +70,7 @@
 
 /* Variables: Mobile Trigger ================================================ */
 
-    $basic-nav-mobile-trigger-background: $black;
+    $basic-nav-mobile-trigger-background: var(--black);
     $basic-nav-mobile-trigger-color: white;
     $basic-nav-mobile-trigger-padding: 1rem;
     $basic-nav-mobile-trigger-font-family: $heading-font-family;
