--- a/assets/post/components/alerts/alerts.css
+++ b/assets/post/components/alerts/alerts.css
@@ -24,7 +24,7 @@
     /* Close Icon */
     $alert-close-icon-stroke-width: 2px;
     $alert-close-icon-size: 1.5rem;
-    $alert-close-icon-color: $black;
+    $alert-close-icon-color: var(--black);
 
 /* Containers =============================================================== */
 .alert__list {
@@ -52,33 +52,33 @@
 
     /* Danger */
     .alert__list-item--danger {
-        background: $color-utility--danger--pale;
-        color: $color-utility--danger;
-        border: $alert-item-border-width solid $color-utility--danger;
+        background: var(--color-utility--danger--pale);
+        color: var(--color-utility--danger);
+        border: $alert-item-border-width solid var(--color-utility--danger);
         border-radius: $alert-item-radius;
     }
 
     /* Warning */
     .alert__list-item--warning {
-        background: $color-utility--warning--pale;
-        color: $color-utility--warning;
-        border: $alert-item-border-width solid $color-utility--warning;
+        background: var(--color-utility--warning--pale);
+        color: var(--color-utility--warning);
+        border: $alert-item-border-width solid var(--color-utility--warning);
         border-radius: $alert-item-radius;
     }
 
     /* Success */
     .alert__list-item--success {
-        background: $color-utility--success--pale;
-        color: $color-utility--success;
-        border: $alert-item-border-width solid $color-utility--success;
+        background: var(--color-utility--success--pale);
+        color: var(--color-utility--success);
+        border: $alert-item-border-width solid var(--color-utility--success);
         border-radius: $alert-item-radius;
     }
 
     /* Neutral */
     .alert__list-item--neutral {
-        background: $color-utility--neutral--pale;
-        color: $color-utility--neutral;
-        border: $alert-item-border-width solid $color-utility--neutral;
+        background: var(--color-utility--neutral--pale);
+        color: var(--color-utility--neutral);
+        border: $alert-item-border-width solid var(--color-utility--neutral);
         border-radius: $alert-item-radius;
     }
 
