--- a/assets/post/components/forms/forms-choices.css
+++ b/assets/post/components/forms/forms-choices.css
@@ -32,12 +32,12 @@
     $form-checkbox-background: white;
 
         /* Checkboxes: Hover */
-        $form-checkbox-background--hover: color(black a(5%));
+        $form-checkbox-background--hover: color-mod(black a(5%));
         $form-checkbox-border--hover: $form-checkbox-border;
 
         /* Checkboxes: Checked */
-        $form-checkbox-background--checked: $highlight;
-        $form-checkbox-border--checked: 2px solid $black;
+        $form-checkbox-background--checked: var(--highlight);
+        $form-checkbox-border--checked: 2px solid var(--black);
         $form-checkbox-outline--checked: inset 0 0 0 4px $white;
 
     /* Radio */
@@ -48,12 +48,12 @@
     $form-radio-background: white;
 
         /* Radio: Hover */
-        $form-radio-background--hover: color(black a(5%));
+        $form-radio-background--hover: color-mod(black a(5%));
         $form-radio-border--hover: $form-radio-border;
 
         /* Radio: Checked */
-        $form-radio-background--checked: $highlight;
-        $form-radio-border--checked: 2px solid $black;
+        $form-radio-background--checked: var(--highlight);
+        $form-radio-border--checked: 2px solid var(--black);
         $form-radio-outline--checked: inset 0 0 0 4px $white;
 
     /* Radio Buttons */
