--- a/assets/post/spec/palette.css
+++ b/assets/post/spec/palette.css
@@ -3,25 +3,28 @@
     PALETTE CSS
 
     Authored by:
-        - Josh Beveridge
         - Justin Bellefontaine
 
 ============================================================================= */
+:root {
+    --gray--mid: color-mod(#8694b6 shade(5%));
+    --gray--light: #f5f6fa;
+    --blue: #49bcff;
+    --purple: #ac5bff;
+    --green: #50d76e;
+    --red: #ff5d5d;
+    --orange: #ff9d00;
+    --black: #1d0e42;
+    --pink: #da2f6d;
 
-$gray--mid: color(#8694b6 shade(5%));
-$gray--light: #f5f6fa;
-$blue: #49bcff;
-$purple: #ac5bff;
-$green: #50d76e;
-$red: #ff5d5d;
-$orange: #ff9d00;
-$black: #1d0e42;
-$pink: #da2f6d;
+    --highlight: var(--pink);
 
-$highlight: $pink;
-
-/* Utility Colors */
-$color-utility--danger: $red;
-$color-utility--warning: $orange;
-$color-utility--success: $green;
-$color-utility--neutral: $blue;
+    --color-utility--danger: var(--red);
+    --color-utility--danger--pale: color-mod(var(--red) a(15%));
+    --color-utility--warning: var(--orange);
+    --color-utility--warning--pale: color-mod(var(--orange) a(15%));
+    --color-utility--success: var(--green);
+    --color-utility--success--pale: color-mod(var(--green) a(15%));
+    --color-utility--neutral: var(--blue);
+    --color-utility--neutral--pale: color-mod(var(--blue) a(15%));
+}
