--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5261,12 +5261,12 @@ form input:disabled + label {
 
 /* Facebook */
 
-.social-icons__item-link[href*="facebook"], [class*="social-icons__item-link--"][href*="facebook"] {
+.social-icons__item-link[href*="facebook.com"], [class*="social-icons__item-link--"][href*="facebook.com"] {
         background: #3b5999;
 
     }
 
-.social-icons__item-link[href*="facebook"] [class*="core-icon--"], [class*="social-icons__item-link--"][href*="facebook"] [class*="core-icon--"] {
+.social-icons__item-link[href*="facebook.com"] [class*="core-icon--"], [class*="social-icons__item-link--"][href*="facebook.com"] [class*="core-icon--"] {
             width: 1.25rem;
             height: 1.25rem;
         }
@@ -5297,12 +5297,12 @@ form input:disabled + label {
 
 /* LinkedIn */
 
-.social-icons__item-link[href*="linkedin"], [class*="social-icons__item-link--"][href*="linkedin"] {
+.social-icons__item-link[href*="linkedin.com"], [class*="social-icons__item-link--"][href*="linkedin.com"] {
         background: #0077B5;
 
     }
 
-.social-icons__item-link[href*="linkedin"] [class*="core-icon--"], [class*="social-icons__item-link--"][href*="linkedin"] [class*="core-icon--"] {
+.social-icons__item-link[href*="linkedin.com"] [class*="core-icon--"], [class*="social-icons__item-link--"][href*="linkedin.com"] [class*="core-icon--"] {
             width: 1.25rem;
             height: 1.25rem;
         }
@@ -5321,12 +5321,12 @@ form input:disabled + label {
 
 /* Twitter */
 
-.social-icons__item-link[href*="twitter"], [class*="social-icons__item-link--"][href*="twitter"] {
+.social-icons__item-link[href*="twitter.com"], [class*="social-icons__item-link--"][href*="twitter.com"] {
         background: #55acee;
 
     }
 
-.social-icons__item-link[href*="twitter"] [class*="core-icon--"], [class*="social-icons__item-link--"][href*="twitter"] [class*="core-icon--"] {
+.social-icons__item-link[href*="twitter.com"] [class*="core-icon--"], [class*="social-icons__item-link--"][href*="twitter.com"] [class*="core-icon--"] {
             width: 1.25rem;
             height: 1.25rem;
         }
@@ -5365,7 +5365,7 @@ form input:disabled + label {
 
 /* Facebook */
 
-.social-icons.no-bg .social-icons__item-link[href*="facebook"] [class*="core-icon--"] use, .social-icons.no-bg [class*="social-icons__item-link--"][href*="facebook"] [class*="core-icon--"] use {
+.social-icons.no-bg .social-icons__item-link[href*="facebook.com"] [class*="core-icon--"] use, .social-icons.no-bg [class*="social-icons__item-link--"][href*="facebook.com"] [class*="core-icon--"] use {
                 fill: #3b5999;
             }
 
@@ -5383,7 +5383,7 @@ form input:disabled + label {
 
 /* LinkedIn */
 
-.social-icons.no-bg .social-icons__item-link[href*="linkedin"] [class*="core-icon--"] use, .social-icons.no-bg [class*="social-icons__item-link--"][href*="linkedin"] [class*="core-icon--"] use {
+.social-icons.no-bg .social-icons__item-link[href*="linkedin.com"] [class*="core-icon--"] use, .social-icons.no-bg [class*="social-icons__item-link--"][href*="linkedin.com"] [class*="core-icon--"] use {
                 fill: #0077B5;
             }
 
@@ -5395,7 +5395,7 @@ form input:disabled + label {
 
 /* Twitter */
 
-.social-icons.no-bg .social-icons__item-link[href*="twitter"] [class*="core-icon--"] use, .social-icons.no-bg [class*="social-icons__item-link--"][href*="twitter"] [class*="core-icon--"] use {
+.social-icons.no-bg .social-icons__item-link[href*="twitter.com"] [class*="core-icon--"] use, .social-icons.no-bg [class*="social-icons__item-link--"][href*="twitter.com"] [class*="core-icon--"] use {
                 fill: #55acee;
             }
 
