--- a/assets/post/components/navigation/navigation-sidebar.css
+++ b/assets/post/components/navigation/navigation-sidebar.css
@@ -113,7 +113,7 @@
     $sidebar-nav-overlay-background: rgba(0,0,0,0.9);
 
 /* Body ===================================================================== */
-body.has-sidebar-nav {
+.has-sidebar-nav {
 
     @media $(l-tablet) {
         padding-left: $sidebar-nav-width--tablet;
@@ -441,11 +441,6 @@ body.has-sidebar-nav {
         @media $menu-media-query {
             transform: translate3d(-100%,0,0);
         }
-
-    }
-
-    /* Items */
-    .sidebar-nav__pane-nav-item {
 
     }
 
